# KoinBot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-deploy.yml  cleanup.yml
src/: main.rs
src/utils/: mod.rs
src/utils/discord/: command_handler.rs  lib.rs  mod.rs  utils.rs
src/utils/discord/commands/: coin.rs  get_price.rs  mod.rs  niche.rs
src/utils/gecko/: lib.rs  mod.rs
src/utils/plotter/: mod.rs
